# AcquittifyWorkspace

./: .env.peregrine.example  .gitignore  AGENTS.md  Acquittify.spec  BOOTSTRAP_PROMPT.md  BOOTSTRAP_REFRESH_PROMPT.md  BOOTSTRAP_SCHEMA_README.md  COPILOT_INSTRUCTIONS.md  DERIVE_WORKER_READINESS_CHECKLIST.md  GOLD_SET_DESIGN.md  LEGAL_UNIT_CONTRACT.md  README.md  README_ACQUITTIFY_INGEST.md  acquittify_brand.py  acquittify_ingest.py  acquittify_query.py  acquittify_retriever.py  acquittify_router.py  acquittify_taxonomy.py  acquittify_taxonomy_agent.py  app.js  app.py  brand.py  case_manager.py  docker-compose.tls.yml  docker-compose.yml  document_ingestion_backend.py  document_ingestion_ui.py  launch_acquittify.sh  pytest.ini  requirements.txt  taxonomy_embedding_agent.py  transcript_ingestion_ui.py
trial-discovery-ai/backend/: .dockerignore  =1.0.9  Dockerfile  Dockerfile.hotfix  Dockerfile.hotfix2  Dockerfile.hotfix3  README.md  alembic.ini  pyproject.toml
trial-discovery-ai/backend/app/: main.py
trial-discovery-ai/backend/scripts/: cancel_user_account.py  caselaw_nightly_ingest_job.py  check_document_metadata_view.py  check_pass1_review_fields.py  get_dropbox_refresh_token.py  grant_admin_role.py  reembed_chunks.py  rerun_matter_passes.py  sanity_check_embedding_context.py  sanity_pass1_preprocess.py  sanity_preprocess_document.py  sync_dropbox_case_folders.py  test_dropbox_connection.py  watch_dropbox_case_folders.py
trial-discovery-ai/backend/tests/: conftest.py  test_agent_chat.py  test_auth_security.py  test_llm_client_config.py  test_matter_documents_api.py  (+1 more)
(+623 files in other folders)
